// =============================================================================
// Enums
// =============================================================================

Enum order_kind {
  cart [note: 'User cart, not yet confirmed as order']
  order [note: 'Confirmed order (paid or being processed)']
  like [note: 'Favorites/wishlist (product/pack likes)']
}

Enum order_status {
  pending [note: 'Pending']
  in_transit [note: 'In transit']
  sent [note: 'Shipped (with shipping date)']
  installation_pending [note: 'Shipped; installation scheduled or awaiting']
  installation_confirmed [note: 'Installation completed']
}

Enum payment_method {
  paypal
  card [note: 'Credit card']
  bizum
}

Enum personalized_solution_status {
  pending_review [note: 'Pending review']
  reviewed [note: 'Reviewed']
  client_contacted [note: 'Client contacted']
  rejected [note: 'Rejected']
  completed [note: 'Completed']
}

Enum address_type {
  shipping
  installation
  other
}

Enum client_type {
  person [note: 'Single person (e.g. DNI, NIE)']
  company [note: 'Company (e.g. CIF)']
}

// =============================================================================
// Tables
// =============================================================================

Table CLIENTS [note: 'Account (person or company). Use CLIENT_CONTACTS for names/phones, CLIENT_ADDRESSES for addresses.'] {
  id int [pk, increment]
  type client_type [not null, note: 'Person vs company']
  identification varchar(20) [null, unique, note: 'ID document (DNI, CIF or NIE); one per account']
  login_email varchar(255) [not null, unique, note: 'Email for authentication']
  password varchar(255) [not null]
  is_active boolean [not null, default: true, note: 'Soft delete']
}

Table CLIENT_CONTACTS {
  id int [pk, increment]
  client_id int [not null, ref: > CLIENTS.id]
  name varchar(255) [not null, note: 'First name']
  surname varchar(255) [null, note: 'Last name']
  phone varchar(50) [null]
  phone2 varchar(50) [null]
  email varchar(255) [null, note: 'Contact email (optional)']
  is_primary boolean [not null, default: false, note: 'Main contact for this client']
  is_active boolean [not null, default: true, note: 'Soft delete']
}

Table CLIENT_ADDRESSES {
  id int [pk, increment]
  client_id int [not null, ref: > CLIENTS.id]
  type address_type [not null, note: 'Shipping, installation, etc.']
  label varchar(100) [null, note: 'e.g. Head office, Warehouse']
  street varchar(255) [not null]
  city varchar(100) [not null]
  province varchar(100) [null, note: 'Provincia']
  postal_code varchar(20) [null, note: 'Required at application level (validation)']
  is_primary boolean [not null, default: false, note: 'Main address for this client']
  is_active boolean [not null, default: true, note: 'Soft delete']
}

Table PRODUCT_CATEGORIES {
  id int [pk, increment]
  code varchar(50) [null, unique, note: 'Category code']
  name varchar(255) [not null]
  is_active boolean [not null, default: true, note: 'Disable without deleting']
}

Table PRODUCT_VARIANT_GROUPS [note: 'Optional grouping of products as siblings (e.g. same screw 30mm, 40mm, 50mm). Order variants by name or value in SQL.'] {
  id int [pk, increment]
  name varchar(255) [null, note: 'Optional display name for the variant group']
}

Table PRODUCTS {
  id int [pk, increment]
  category_id int [not null, ref: > PRODUCT_CATEGORIES.id]
  variant_group_id int [null, ref: > PRODUCT_VARIANT_GROUPS.id, note: 'Optional; products with same id are siblings/variants']
  code varchar(50) [null, unique, note: 'Product code']
  name varchar(255) [not null]
  description text [null]
  price decimal(10,2) [not null]
  stock int [not null, default: 0]
  is_installable boolean [not null, default: false]
  installation_price decimal(10,2) [null, note: 'When is_installable=true; may vary by postal code in app']
  is_extra_keys_available boolean [not null, default: false, note: 'Product can have extra physical keys']
  extra_key_unit_price decimal(10,2) [null, note: 'Price per extra key when is_extra_keys_available=true']
  is_featured boolean [not null, default: false, note: 'Featured on homepage']
  is_trending boolean [not null, default: false, note: 'Trending product']
  is_active boolean [not null, default: true, note: 'Disable without deleting']
}

Table FEATURE_NAMES {
  id int [pk, increment]
  name varchar(255) [not null, unique]
  is_active boolean [not null, default: true, note: 'Disable without deleting']
}

Table FEATURES {
  id int [pk, increment]
  feature_name_id int [not null, ref: > FEATURE_NAMES.id]
  value varchar(255) [not null]
  is_active boolean [not null, default: true, note: 'Soft delete']
}

Table PRODUCT_FEATURES {
  product_id int [not null, ref: > PRODUCTS.id, pk]
  feature_id int [not null, ref: > FEATURES.id, pk]
}

Table PRODUCT_IMAGES [note: 'References files on disk (this app: public/uploads/). Primary = sort_order 1 (or min).'] {
  id int [pk, increment]
  product_id int [not null, ref: > PRODUCTS.id]
  storage_path varchar(1024) [not null, note: 'Path relative to uploads disk, e.g. products/74/image-1.jpg']
  filename varchar(255) [null, note: 'Original or assigned filename']
  size_bytes int [not null]
  checksum varchar(64) [null, note: 'e.g. SHA-256 hash']
  content_type varchar(100) [not null]
  sort_order int [not null, default: 0, note: 'Display order; primary when 1 or min']
  is_active boolean [not null, default: true, note: 'Soft delete']
}

Table ORDERS {
  id int [pk, increment]
  client_id int [not null, ref: > CLIENTS.id]

  kind order_kind [not null, note: 'cart = shopping cart; order = confirmed order']
  status order_status [null, note: 'Only when kind=order; null when cart']

  order_date timestamp [null, note: 'Null while cart; set on checkout']
  shipping_date timestamp [null]
  shipping_price decimal(10,2) [null]
}

Table ORDER_ADDRESSES [note: 'One row per address type per order (shipping, installation).'] {
  id int [pk, increment]
  order_id int [not null, ref: > ORDERS.id]
  type address_type [not null, note: 'shipping, installation']
  street varchar(255) [not null]
  city varchar(100) [not null]
  province varchar(100) [null, note: 'Provincia']
  postal_code varchar(20) [null, note: 'Required at application level (validation)']
  note text [null, note: 'e.g. If I\'m not there..., I\'ll be there at 3...']
}

Table ORDER_LINES [note: 'Line items of an order (product or pack, quantity, price)'] {
  id int [pk, increment]
  order_id int [not null, ref: > ORDERS.id]
  product_id int [null, ref: > PRODUCTS.id, note: 'One of product_id or pack_id must be set']
  pack_id int [null, ref: > PACKS.id, note: 'One of product_id or pack_id must be set']
  quantity int [not null]
  unit_price decimal(10,2) [null, note: 'Set at payment time from current product/pack price; null while in cart']
  offer decimal(10,2) [null, note: 'Discount amount applied']
  is_installation_requested boolean [not null, default: false]
  installation_price decimal(10,2) [null, note: 'Optional installation price for this line']
  keys_all_same boolean [not null, default: false, note: 'When pack contains_keys: true = client chose all same key, false = all different (or N/A)']
  extra_keys_qty int [not null, default: 0, note: 'Number of extra keys requested']
  extra_key_unit_price decimal(10,2) [null, note: 'Price per extra key at order time']
  is_included boolean [not null, default: true, note: 'If false, line is excluded from total (e.g. saved for later)']
}

Table PAYMENTS [note: 'One or more payment records per order (e.g. split payments). No status/gateway_name.'] {
  id int [pk, increment]
  order_id int [not null, ref: > ORDERS.id]
  amount decimal(10,2) [not null]
  payment_method payment_method [not null]
  gateway_reference varchar(255) [null, note: 'External transaction id from gateway']
  paid_at timestamp [null]
}

Table ADMINS {
  id int [pk, increment]
  username varchar(255) [not null, unique]
  password varchar(255) [not null]
  is_active boolean [not null, default: true, note: 'Soft delete']
  last_login_at timestamp [null, note: 'Last successful login']
}

Table PACKS {
  id int [pk, increment]
  name varchar(255) [not null]
  description text [null]
  price decimal(10,2) [not null]
  is_trending boolean [not null, default: false, note: 'Trending pack']
  is_active boolean [not null, default: true, note: 'Disable without deleting']
  is_installable boolean [not null, default: false, note: 'Pack can include installation']
  installation_price decimal(10,2) [null, note: 'Installation price when is_installable']
  contains_keys boolean [not null, default: false, note: 'Pack contains keys (e.g. 3 locks); client can choose at cart: all same key or all different']
}

Table PACK_IMAGES [note: 'References files on disk (this app: public/uploads/). Primary = sort_order 1 (or min).'] {
  id int [pk, increment]
  pack_id int [not null, ref: > PACKS.id]
  storage_path varchar(1024) [not null, note: 'Path relative to uploads disk, e.g. packs/1/image-1.jpg']
  filename varchar(255) [null, note: 'Original or assigned filename']
  size_bytes int [not null]
  checksum varchar(64) [null, note: 'e.g. SHA-256 hash']
  content_type varchar(100) [not null]
  sort_order int [not null, default: 0, note: 'Display order; primary when 1 or min']
  is_active boolean [not null, default: true, note: 'Soft delete']
}

Table PACK_ITEMS [note: 'Products that belong to a pack'] {
  id int [pk, increment]
  pack_id int [not null, ref: > PACKS.id]
  product_id int [not null, ref: > PRODUCTS.id]
  is_active boolean [not null, default: true]
}

Table PERSONALIZED_SOLUTIONS [note: 'Can be independent of client and order (client_id, order_id null).'] {
  id int [pk, increment]
  client_id int [null, ref: > CLIENTS.id]
  order_id int [null, ref: > ORDERS.id]
  email varchar(255) [null]
  phone varchar(50) [null]
  address_street varchar(255) [null, note: 'Same structure as ORDERS shipping address']
  address_city varchar(100) [null]
  address_province varchar(100) [null, note: 'Provincia']
  address_postal_code varchar(20) [null, note: 'Required at application level (validation)']
  address_note text [null, note: 'e.g. If I\'m not there..., I\'ll be there at 3...']
  problem_description text [null]
  resolution text [null, note: 'Admin resolution / quote']
  status personalized_solution_status [not null]
  is_active boolean [not null, default: true, note: 'Soft delete']
}

Table PERSONALIZED_SOLUTION_ATTACHMENTS [note: 'References files on disk (this app: public/uploads/)'] {
  id int [pk, increment]
  personalized_solution_id int [not null, ref: > PERSONALIZED_SOLUTIONS.id]
  storage_path varchar(1024) [not null, note: 'Path relative to uploads disk, e.g. personalized-solutions/1/attachment-1.jpg']
  original_filename varchar(255) [null]
  size_bytes int [not null]
  checksum varchar(64) [null, note: 'e.g. SHA-256 hash']
  content_type varchar(100) [not null]
  description text [null]
  is_active boolean [not null, default: true, note: 'Soft delete']
}
